portfolio/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: aniklpu01/portfolio_web:latest  # Updated to use the pushed image
        ports:
        - containerPort: 8000
