portfolio/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: portfolio
spec:
  type: LoadBalancer  # Can also be NodePort for local development
  ports:
    - port: 80          # The port exposed by the service
      targetPort: 8000  # The port your Django app is running on in the container
  selector:
    app: django         # This should match the label of your Django pod
